syntax = "proto3";

package com.tservice.proto.context;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service ContextService {
  rpc create(CreateProto) returns (ContextProto);
  rpc update(UpdateProto) returns (ContextProto);
  rpc delete(DeleteProto) returns (google.protobuf.Empty);
  rpc findById(FindByIdProto) returns (ContextProto);
  rpc findAll(FindAllProto) returns (stream ContextProto);
  rpc findByName(FindByNameProto) returns (stream ContextProto);
  rpc findByValue(FindByValueProto) returns (stream ContextProto);
}

message ContextProto {
  string id = 1;
  string name = 2;
  string value = 3;
}

message CreateProto {
  string name = 1;
  string value = 2;
}

message UpdateProto {
  string id = 1;
  string name = 2;
  string value = 3;
}

message DeleteProto {
  string id = 1;
}

message FindByIdProto {
  string id = 1;
}

message FindAllProto {}

message FindByNameProto {
  string name = 1;
}

message FindByValueProto {
  string value = 1;
}

