syntax = "proto3";

package com.tservice.proto;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service TspoonService {
  rpc createTspoon(CreateTspoonProto) returns (TspoonProto);
  rpc updateTspoon(UpdateTspoonProto) returns (TspoonProto);
  rpc deleteTspoon(DeleteTspoonProto) returns (google.protobuf.Empty);
  rpc getById(GetTspoonByIdProto) returns (TspoonProto);
  rpc getAllStream(GetAllTspoonsProto) returns (TspoonProto);
  rpc findTspoonsByContextStream(FindTspoonsByContextProto) returns (TspoonProto);
  rpc findTspoonsByNameStream(FindTspoonsByNameProto) returns (TspoonProto);
  rpc findTspoonsByValueStream(FindTspoonsByValueProto) returns (TspoonProto);
}

message TspoonProto {
  string tspoonId = 1;
  string context = 2;
  string name = 3;
  string value = 4;
}

message CreateTspoonProto {
  string context = 2;
  string name = 3;
  string value = 4;
}

message UpdateTspoonProto {
  string tspoonId = 1;
  string context = 2;
  string name = 3;
  string value = 4;
}

message DeleteTspoonProto {
  string tspoonId = 1;
}

message GetTspoonByIdProto {
  string tspoonId = 1;
}

message GetAllTspoonsProto {}

message FindTspoonsByContextProto {
  string context = 1;
}

message FindTspoonsByNameProto {
  string name = 1;
}

message FindTspoonsByValueProto {
  string value = 1;
}
